subiendo cambios, ya quedó

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
 <body>
     <h1>MINI ZOO</h1>
-    <select>
-      <option value="" hiden>Seleccion una opción</option>
-      <option value="original">Original</option>
-      <option value="sepia">Sepia</option>
-      <option value="blanco y negro">Blanco y Negro</option>
-      <option value="invertir colore">Invertir Colores</option>
+    <select id="nav">
+      <option value="nada">Seleccion una opción</option>
+      <option data-filtro = "original" value="original">Original</option>
+      <option data-filtro = "sepia" value="sepia">Sepia</option>
+      <option data-filtro = "gray" value="white-black">Blanco y Negro</option>
+      <option data-filtro = "invert" value="invert">Invertir Colores</option>
     </select>
     <section>
-        <img class="animal original" src="assets/images/conejos.jpg" alt="conejos">
+        <img class="animal" src="assets/images/conejos.jpg" alt="conejos">
         <img class="animal" src="assets/images/elefante.jpg" alt="conejos">
-        <img class="animal" src="assets/images/jirafas.jpg" alt="conejos">
-        <img class="animal" src="assets/images/leones.jpg" alt="conejos">
-        <img class="animal" src="assets/images/monos.jpg" alt="conejos">
-        <img class="animal" src="assets/images/panda.jpg" alt="conejos">
+        <img class="animal" src="assets/images/jirafas.jpg" alt="jirafas">
+        <img class="animal" src="assets/images/leones.jpg" alt="leones">
+        <img class="animal" src="assets/images/monos.jpg" alt="monos">
+        <img class="animal" src="assets/images/panda.jpg" alt="panda">
 
     </section>
 
